--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("bg2.jpg");
 }
+.fade-in-section {
+  opacity: 0; /* Başlangıçta görünmez */
+  transform: translateY(20px); /* Aşağıdan yukarıya */
+  transition: opacity 1s ease-out, transform 1s ease-out; /* Geçiş efekti */
+}
+
+.fade-in-section.is-visible {
+  opacity: 1; /* Görünürlük */
+  transform: translateY(0); /* Konum sıfırlanıyor */
+}
