--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,14 +6,16 @@
   background-size: cover;
   background-position: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("bg2.jpg");
+    url("/bg2.jpg");
 }
+
 .register {
   background-size: cover;
   background-position: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("registerimg.jpg");
+    url("/registerimg.jpg");
 }
+
 .fade-in-section {
   opacity: 0; /* Başlangıçta görünmez */
   transform: translateY(20px); /* Aşağıdan yukarıya */
