Optimize header image

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,9 +4,9 @@
 
 .main {
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/bg2.jpg");
+    url("/bg-header.jpg");
 }
 
 .register {
